--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,10 @@ header {
   footer a {
     color: #024e76;
   }
+
+
+
+  section {
+    padding: 60px;
+    background-image: url("../images/hero-bg.jpg");
+  }
