Added background image file, but it's not displaying in the index file?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,5 +71,12 @@ header {
 
   section {
     padding: 60px;
-    background-image: url("../images/hero-bg.jpg");
+  
   }
+
+  /* Hero Style Start */
+.hero {
+  background-image: url("../images/hero-bg.jpg");
+  height: 600px;
+}
+/* Hero Style End */
