--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ header {
   text-align: center;
 }
 
+/*  Removed rule
 .intro h2 {
   font-size: 55px;
   color: #024e76;
@@ -137,6 +138,7 @@ header {
   border-color: #fce138;
   display: inline-block;
 }
+*/
 
 .intro p {
   line-height: 1.7;
@@ -144,4 +146,63 @@ header {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+}
+
+/*  What You Do section styles  */
+.steps {
+  text-align: center;
+  background: #fce138;
+}
+
+/*  Removed rule
+.steps h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #39a6b2;
+}
+*/ 
+
+/*  Consolidated style, eliminating the .intro h2 & .steps h2 rules  for purposes of DRY */ 
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
 }
