Added content to hero, replaced image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ header {
 
   /* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url("../images/hero-bg2.jpg");
   height: 600px;
   background-size: cover;
   background-position: center;
