Added flexbox to middle part

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,11 +143,12 @@ header {
 }
 /* Hero Style End */
 
+/*  Removed rules
 .intro {
   text-align: center;
 }
 
-/*  Removed rule
+
 .intro h2 {
   font-size: 55px;
   color: #024e76;
@@ -165,11 +166,12 @@ header {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
+
 
 /*  What You Do section styles  */
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -188,10 +190,11 @@ header {
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -228,7 +231,6 @@ header {
 
 /*  Trainers section styles  */
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -276,7 +278,6 @@ header {
 
 /* REACH OUT section START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -315,3 +316,7 @@ header {
 }
 
 /* REACH OUT STYLES END */
+
+.flex-row {
+  display: flex;
+}
