adding more style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,14 @@ header {
 /* Added styles to match the sample */
 .hero h2 {
   color: #fce138;
+  display: flex;
+  justify-content: center;
 }
 
 .hero p {
   color: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 /* End of added styles to match sample */ 
@@ -371,9 +375,21 @@ header {
 
 .flex-row {
   display: flex;
-  
+  justify-content: center;
 }
 
+/* Again, adding styles to match the sample */
+
+.flex-row p {
+  color: #024e76;
+  display: flex;
+  justify-content: center;
+}
+
+/* End of adding styles to match sample */ 
+
+
+}
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 
@@ -424,7 +440,32 @@ header {
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-  
+  section {
+    padding: 30px 15px;
+  }
+
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+
+  .step-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .step-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .step-text {
+    flex: 100%;  
+  }
+
     
   
 }
