--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,7 +377,7 @@ header {
   display: flex;
 }
 
-/* Again, adding styles to match the sample */
+/* Again, adding styles to try to match the sample */
 
 .flex-row p {
   color: #024e76;
@@ -471,6 +471,34 @@ header {
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
+  .hero-form button {
+    width: 100%;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  .contact-form {
+    order: 3;
+  }
+
   
     
   
