Holy cow lotsa stylin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg2.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;    
   }
 
   header h1 {
@@ -23,6 +30,7 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header a {
@@ -46,7 +54,17 @@ header {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
+
+  /* hover counterpart to above style */
+  header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
 
   footer {
     background: #fce138;
@@ -82,7 +100,8 @@ header {
 .hero {
   background-image: url("../images/hero-bg2.jpg");
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;   
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -118,15 +137,18 @@ header {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  background-color: rgb(252, 255, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -146,6 +168,13 @@ header {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -158,7 +187,17 @@ header {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 }
+
+/* hover counterpart to above */
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
+
+
+
+
 /* Hero Style End */
 
 
@@ -204,12 +243,16 @@ header {
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
-  width: 80%;
   border-bottom: 1px solid #39a6b2;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:last-child {
+  border-bottom: none;
 }
 
 
@@ -358,6 +401,13 @@ header {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .contact-form button {
@@ -368,8 +418,14 @@ header {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
 }
 
+/* hover counterpart to above */
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
 
 /* REACH OUT STYLES END */
 
@@ -394,6 +450,7 @@ header {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative
   }
   
   Header h1 {
@@ -496,8 +553,10 @@ header {
   .contact-form {
     order: 3;
   }
+  
+}
 
-  
-    
-  
+.some-class {
+  text-shadow: 5px 10px 15px black;
+  box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.25);
 }
