added :root pseudo-class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,21 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
   }
 
   /* apply styles to <header> */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -28,14 +34,14 @@ header {
   header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
   }
 
   header nav {
@@ -59,15 +65,15 @@ header {
 
   /* hover counterpart to above style */
   header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
   }
   
 
   footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -76,7 +82,7 @@ header {
   }
 
   footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
   }
@@ -87,7 +93,7 @@ header {
   }
 
   footer a {
-    color: #024e76;
+    color: var(--secondary-color);
   }
 
   /* Section styles */
@@ -110,7 +116,7 @@ header {
 
 /* Added styles to match the sample */
 .hero h2 {
-  color: #fce138;
+  color: var(--primary-color);
   display: flex;
   justify-content: center;
 }
@@ -136,15 +142,15 @@ header {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-  border: 3px solid #024e76;
+  border: 3px solid var(--secondary-color);
   background-color: rgb(252, 255, 56, 0.8);
   padding: 20px;
-  color: #024e76;
+  color: var(--secondary-color)024e76;
   width: 40%;
   margin: 3.5%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -161,11 +167,11 @@ header {
 }
 
 .form-input {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   border-radius: 10px;
@@ -182,8 +188,8 @@ header {
 }
 
 .hero-form button {
-  color: #fce138;
-  background-color: #024e76;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -192,7 +198,7 @@ header {
 
 /* hover counterpart to above */
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--tertiary-color);  
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -262,7 +268,7 @@ header {
 /* section title styles */ 
 .section-title {
   font-size: 48px;
-  color: #024e76;
+  color: var(--secondary-color);
   border-bottom: 3px solid;
   padding-bottom: 20px;
   text-align: center;
@@ -271,11 +277,11 @@ header {
 }
 
 .primary-border {
-  border-color: #fce138;
+  border-color: var(--primary-color);
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 /* end of section title style */
 
@@ -283,7 +289,7 @@ header {
 /* What we do style */ 
 .intro p {
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
@@ -295,13 +301,13 @@ header {
 /*  What You Do section styles  */
 
 .steps { 
-  background: #fce138;
+  background: var(--primary-color);
 }
 
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
   width: 80%;
   display: flex;
   flex-wrap: wrap;
@@ -315,7 +321,7 @@ header {
 
 
 .step h3 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   flex: 1 30%;
 }
@@ -343,14 +349,14 @@ header {
 }
 
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* End of What you do styles */
@@ -368,7 +374,7 @@ header {
 .trainer {
   margin: 20px;
   flex: 1;
-  background: #024e76;
+  background: var(--secondary-color);
   color: #fce138;
 }
 
@@ -407,11 +413,11 @@ header {
 /* REACH OUT section START */
 
 .contact {
-  background: #024e76;
+  background: var(--secondary-color);
 }
 
 .contact h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info {
@@ -434,7 +440,7 @@ header {
 }
 
 .contact-info h3 {
-  color: #fce138;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -446,16 +452,16 @@ header {
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -471,8 +477,8 @@ header {
 .contact-form button {
   width: 100%;
   border: none;
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -481,8 +487,8 @@ header {
 
 /* hover counterpart to above */
 .contact-form button:hover {
-  color: #fce138;
-  background: #39a6b2;
+  color: var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 /* REACH OUT STYLES END */
@@ -494,7 +500,7 @@ header {
 /* Again, adding styles to try to match the sample */
 
 .flex-row p {
-  color: #024e76;
+  color: var(--secondary-color);
   display: flex;
   justify-content: center;
 }
